Features/Menu_Page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">On dit Galettes !</a>
+                    <a class="navbar-brand" href="index.html">
+                        <img src="assets/img/logo.png" alt="On dit Galettes" class="img-fluid" style="height: 100px;">
+                    </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -22,10 +24,10 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link active" href="index.html">Accueil</a>
+                                <a class="nav-link" href="index.html">Accueil</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="menus.html">Notre Carte</a>
+                                <a class="nav-link active" href="menus.html">Notre Carte</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="reservation.html">Réservation</a>
@@ -49,28 +51,28 @@
                 <h2 class="text-center mb-4">Nos Spécialités</h2>
                 <div class="row">
                     <div class="col-md-4 mb-4">
-                        <div class="card">
-                            <img src="assets/img/galette-complete.jpg" class="card-img-top" alt="Galette Complète">
-                            <div class="card-body">
+                        <div class="card h-100">
+                            <img src="assets/img/complete.png" class="card-img-top img-fluid p-3" alt="La Classique" style="object-fit: contain; height: 200px;">
+                            <div class="card-body text-center">
                                 <h5 class="card-title">La Complète</h5>
-                                <p class="card-text">Jambon, œuf, emmental, le grand classique de la cuisine bretonne.</p>
+                                <p class="card-text">La grande classique de notre cuisine.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-4">
-                        <div class="card">
-                            <img src="assets/img/crepe-caramel.jpg" class="card-img-top" alt="Crêpe Caramel">
-                            <div class="card-body">
-                                <h5 class="card-title">Crêpe Caramel Beurre Salé</h5>
-                                <p class="card-text">Notre caramel fait maison avec du beurre salé de Bretagne.</p>
+                        <div class="card h-100">
+                            <img src="assets/img/crepe.png" class="card-img-top img-fluid p-3" alt="La dinguerie" style="object-fit: contain; height: 200px;">
+                            <div class="card-body text-center">
+                                <h5 class="card-title">La dinguerie</h5>
+                                <p class="card-text">Notre chocolat fait maison du commerce de Bretagne.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-4">
-                        <div class="card">
-                            <img src="assets/img/cidre.jpg" class="card-img-top" alt="Cidre">
-                            <div class="card-body">
-                                <h5 class="card-title">Notre Sélection de Cidres</h5>
+                        <div class="card h-100">
+                            <img src="assets/img/cidre.png" class="card-img-top img-fluid p-3" alt="Le grand cru" style="object-fit: contain; height: 200px;">
+                            <div class="card-body text-center">
+                                <h5 class="card-title">Nos grands crus</h5>
                                 <p class="card-text">Les meilleurs cidres de producteurs locaux.</p>
                             </div>
                         </div>
