--- a/reservation.html
+++ b/reservation.html
@@ -14,7 +14,9 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">On dit Galettes !</a>
+                    <a class="navbar-brand" href="index.html">
+                        <img src="assets/img/logo.png" alt="On dit Galettes" class="img-fluid" style="height: 100px;">
+                    </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -25,10 +27,10 @@
                                 <a class="nav-link" href="index.html">Accueil</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="menus.html">Notre Carte</a>
+                                <a class="nav-link active" href="menus.html">Notre Carte</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="reservation.html">Réservation</a>
+                                <a class="nav-link" href="reservation.html">Réservation</a>
                             </li>
                         </ul>
                     </div>
