Features/Menu_Page_hover-effect

--- a/menus.html
+++ b/menus.html
@@ -42,46 +42,44 @@
             <section class="container mt-5">
                 <h1 class="text-center mb-4">Nos Menus</h1>
                 <div class="row justify-content-center">
-                    <!-- Menu du Terroir -->
                     <div class="col-md-4 mb-4">
                         <div class="card h-100 shadow">
                             <div class="card-header bg-primary text-white text-center">
-                                <h3 class="card-title mb-0">Menu du Terroir</h3>
+                                <h3 class="card-title mb-0">Menu du Dingus</h3>
                                 <p class="mb-0">17.90€</p>
                             </div>
                             <div class="card-body">
                                 <h5 class="text-muted mb-3">Une galette au choix</h5>
                                 <ul class="list-unstyled">
-                                    <li><i class="fas text-success me-2"></i>Complète (œuf, jambon, fromage)</li>
-                                    <li><i class="fas text-success me-2"></i>Forestière (champignons, lardons, crème)</li>
-                                    <li><i class="fas text-success me-2"></i>Paysanne (pommes de terre, oignons, lardons)</li>
+                                    <li><i class="fas text-success me-2"></i>La Complète (œuf, jambon, fromage)</li>
+                                    <li><i class="fas text-success me-2"></i>La Spécial (champignons, lardons, crème)</li>
+                                    <li><i class="fas text-success me-2"></i>La Surgelé(pommes de terre, oignons, lardons)</li>
                                 </ul>
                                 <h5 class="text-muted mb-3">Une crêpe au choix</h5>
                                 <ul class="list-unstyled">
-                                    <li><i class="fas text-success me-2"></i>Beurre sucre</li>
-                                    <li><i class="fas text-success me-2"></i>Chocolat maison</li>
-                                    <li><i class="fas text-success me-2"></i>Caramel au beurre salé</li>
+                                    <li><i class="fas text-success me-2"></i>La Bretonne</li>
+                                    <li><i class="fas text-success me-2"></i>La dinguerie</li>
+                                    <li><i class="fas text-success me-2"></i>L'Autre</li>
                                 </ul>
                                 <h5 class="text-muted mb-3">Boisson</h5>
                                 <ul class="list-unstyled mb-0">
-                                    <li><i class="fas text-success me-2"></i>Bolée de cidre ou Soda</li>
+                                    <li><i class="fas text-success me-2"></i>La Bolée du village</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-        
-                    <!-- Menu Gourmand -->
+
                     <div class="col-md-4 mb-4">
                         <div class="card h-100 shadow">
                             <div class="card-header bg-success text-white text-center">
-                                <h3 class="card-title mb-0">Menu Gourmand</h3>
+                                <h3 class="card-title mb-0">Menu du Gourmand</h3>
                                 <p class="mb-0">22.90€</p>
                             </div>
                             <div class="card-body">
                                 <h5 class="text-muted mb-3">Une entrée au choix</h5>
                                 <ul class="list-unstyled">
-                                    <li><i class="fas text-success me-2"></i>Soupe à l'oignon gratinée</li>
-                                    <li><i class="fas text-success me-2"></i>Salade bretonne</li>
+                                    <li><i class="fas text-success me-2"></i>Soupe à l'oignon</li>
+                                    <li><i class="fas text-success me-2"></i>Salade bretonne industrielle</li>
                                 </ul>
                                 <h5 class="text-muted mb-3">Une galette au choix</h5>
                                 <ul class="list-unstyled">
@@ -93,28 +91,27 @@
                                 </ul>
                                 <h5 class="text-muted mb-3">Boisson</h5>
                                 <ul class="list-unstyled mb-0">
-                                    <li><i class="fas text-success me-2"></i>25cl de cidre ou Soda</li>
+                                    <li><i class="fas text-success me-2"></i>La Bouteille du village</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-        
-                    <!-- Menu Enfant -->
+
                     <div class="col-md-4 mb-4">
                         <div class="card h-100 shadow">
                             <div class="card-header bg-info text-white text-center">
-                                <h3 class="card-title mb-0">Menu P'tit Breton</h3>
+                                <h3 class="card-title mb-0">Mon P'tit Breton</h3>
                                 <p class="mb-0">9.90€</p>
                             </div>
                             <div class="card-body">
                                 <h5 class="text-muted mb-3">Une galette au choix</h5>
                                 <ul class="list-unstyled">
-                                    <li><i class="fas text-success me-2"></i>Jambon fromage</li>
-                                    <li><i class="fas text-success me-2"></i>Œuf fromage</li>
+                                    <li><i class="fas text-success me-2"></i>La Complète</li>
+                                    <li><i class="fas text-success me-2"></i>La Dinguerie</li>
                                 </ul>
                                 <h5 class="text-muted mb-3">Une crêpe au choix</h5>
                                 <ul class="list-unstyled">
-                                    <li><i class="fas text-success me-2"></i>Nutella</li>
+                                    <li><i class="fas text-success me-2"></i>Nutezh'lla</li>
                                     <li><i class="fas text-success me-2"></i>Confiture</li>
                                     <li><i class="fas text-success me-2"></i>Sucre</li>
                                 </ul>
@@ -136,6 +133,145 @@
                     <small>Allergènes : n'hésitez pas à nous consulter pour plus d'informations.</small>
                 </div>
             </section>
+
+            <section class="container mt-5">
+                <div class="mb-4">
+                    <div class="card-header">
+                        <h3 class="mb-0">Nos Galettes Salées</h3>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Nom</th>
+                                        <th scope="col">Description</th>
+                                        <th scope="col">Prix</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>La Complète</td>
+                                        <td>Jambon, œuf, emmental</td>
+                                        <td>8.50 €</td>
+                                    </tr>
+                                    <tr>
+                                        <td>La Forestière</td>
+                                        <td>Champignons, lardons, crème, emmental</td>
+                                        <td>9.50 €</td>
+                                    </tr>
+                                    <tr>
+                                        <td>La Chèvre Miel</td>
+                                        <td>Chèvre, miel, noix, salade</td>
+                                        <td>10.50 €</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="mb-4">
+                    <div class="card-header">
+                        <h3 class="mb-0">Nos Crêpes Sucrées</h3>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Nom</th>
+                                        <th scope="col">Description</th>
+                                        <th scope="col">Prix</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>La Classique</td>
+                                        <td>Beurre sucre</td>
+                                        <td>3.50 €</td>
+                                    </tr>
+                                    <tr>
+                                        <td>La Chocolat Maison</td>
+                                        <td>Chocolat noir fait maison</td>
+                                        <td>4.50 €</td>
+                                    </tr>
+                                    <tr>
+                                        <td>La Caramel</td>
+                                        <td>Caramel au beurre salé maison</td>
+                                        <td>4.50 €</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="mb-4">
+                    <div class="card-header">
+                        <h3 class="mb-0">Nos Boissons</h3>
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h4 class="mb-3">Cidres</h4>
+                                <div class="table-responsive">
+                                    <table class="table table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col">Nom</th>
+                                                <th scope="col">Prix</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>Cidre Brut (bolée)</td>
+                                                <td>3.00 €</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Cidre Doux (bolée)</td>
+                                                <td>3.00 €</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Bouteille (75cl)</td>
+                                                <td>12.00 €</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <h4 class="mb-3">Autres Boissons</h4>
+                                <div class="table-responsive">
+                                    <table class="table table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col">Nom</th>
+                                                <th scope="col">Prix</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>Eau minérale (50cl)</td>
+                                                <td>3.00 €</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Soda (33cl)</td>
+                                                <td>3.50 €</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Jus de fruits (25cl)</td>
+                                                <td>3.50 €</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
         </main>
 
         <footer class="bg-dark text-white text-center py-3">
