--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Accueil</a>
+                                <a class="nav-link active" href="index.html">Accueil</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="menus.html">Notre Carte</a>
+                                <a class="nav-link" href="menus.html">Notre Carte</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="reservation.html">Réservation</a>
