--- a/reservation.html
+++ b/reservation.html
@@ -27,10 +27,10 @@
                                 <a class="nav-link" href="index.html">Accueil</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="menus.html">Notre Carte</a>
+                                <a class="nav-link" href="menus.html">Notre Carte</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="reservation.html">Réservation</a>
+                                <a class="nav-link active" href="reservation.html">Réservation</a>
                             </li>
                         </ul>
                     </div>
